--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,10 @@ api_version: 1
 default_expiration: '3650d'
 
 handlers:
+- url: /remote_api 
+  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py 
+  login: admin 
+
 - url: /favicon.ico
   static_files: static/images/favicon.ico
   upload: static/images/favicon.ico
